--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ rvm:
   - 2.6.5
 services:
   - postgresql
+before_install:
+  - gem update --system
+  - gem install bundler
 before_script:
   - psql -C 'CREATE DATABASE enum_kit_test;' -U postgres
 env:
