--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - gem update --system
   - gem install bundler
 before_script:
-  - psql -C 'CREATE DATABASE enum_kit_test;' -U postgres
+  - psql -c 'CREATE DATABASE enum_kit_test;' -U postgres
 env:
   global:
     - DATABASE_URL="postgresql://127.0.0.1:5432/enum_kit_test"
